[package]
name = "csvargs"
version = "0.3.1"
edition = "2021"
authors = ["Frederick Price <fprice@pricemail.ca>"]
license = "BSD3"
description = "A command-line tool for processing CSV files with Jinja2 templates and executing commands on each row."
homepage = "https://github.com/rickprice/csvargs"
repository = "https://github.com/rickprice/csvargs"

[dependencies]
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
minijinja = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
